[package]
name = "stest"
version = "1.0.0-alpha.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
stest-macro = {path = "./stest-macro"}
starcoin-logger = {path = "../logger"}
timeout-join-handler = {path = "../timeout-join-handler"}
log = "0.4.14"
actix = "0.11.0-beta.3"
actix-rt = "2.1.0"
futures = "0.3.12"
tokio = { version = "1.3.0", features = ["full"] }
anyhow = "1.0.38"

