[package]
name = "stest-macro"
version = "1.0.0-alpha.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full"] }
darling = "0.10.2"
proc-macro2 = "1.0"

[dev-dependencies]
actix = "0.11.0-beta.3"
actix-rt = "2.1.0"
stest = { path = "../../stest"}
